--- a/src/Translation/locales/es.json
+++ b/src/Translation/locales/es.json
@@ -235,6 +235,7 @@
     "hero_title": "Elige tu ubicación ideal en Genesis City",
     "hero_subtitle": "Mercado de LAND de Decentraland. Sin comisiones.",
     "get_started": "Comenzar",
+    "watch_tutorial": "Mira el tutorial",
     "newest_lands": "Nuevas LAND",
     "view_more": "Ver Más"
   }
