--- a/src/Translation/locales/fr.json
+++ b/src/Translation/locales/fr.json
@@ -239,6 +239,7 @@
     "hero_title": "Choisissez votre emplacement idéal à Genesis City",
     "hero_subtitle": "Marché décentralisé pour LAND. Zéro frais.",
     "get_started": "Commencer",
+    "watch_tutorial": "Regarder le tutoriel",
     "newest_lands": "Les plus récents LAND",
     "view_more": "Afficher plus"
   }
