--- a/src/Translation/locales/zh.json
+++ b/src/Translation/locales/zh.json
@@ -217,6 +217,7 @@
     "hero_title": "在\"创世纪城\"中挑选你的梦想领地",
     "hero_subtitle": "去中心化虚拟土地市场。免交易费。",
     "get_started": "现在就开始",
+    "watch_tutorial": "观看教程",
     "newest_lands": "最新上架虚拟土地",
     "view_more": "查看更多"
   }
