--- a/src/Translation/locales/en.json
+++ b/src/Translation/locales/en.json
@@ -200,6 +200,14 @@
       "Authorize the {marketplace_contract_link} to operate LAND on your behalf",
     "authorization": "Authorization"
   },
+  "transfer_mana": {
+    "title": "Transfer MANA",
+    "action": "Transfer",
+    "current_balance": "Your current balance is {balance}",
+    "irreversible":
+      "Remember that transferring MANA is an irreversible operation.",
+    "own_address_warning": "That's your own address!"
+  },
   "derivation_path": {
     "supported":
       "We only support paths that start with {paths} for the time being"
