--- a/src/Translation/locales/es.json
+++ b/src/Translation/locales/es.json
@@ -204,6 +204,14 @@
       "Autorizar al {marketplace_contract_link} a operar MANA por tu cuenta",
     "authorization": "Autorización"
   },
+  "transfer_mana": {
+    "title": "Transferir MANA",
+    "action": "Transferir",
+    "current_balance": "Tu balance actual es {balance}",
+    "irreversible":
+      "Recuerda que transferir MANA es una operación irreversible.",
+    "own_address_warning": "Esa es tu propia dirección!"
+  },
   "derivation_path": {
     "supported":
       "Por el momento solo soportamos derivation paths que comienzan con {paths}"
