--- a/src/Translation/locales/ko.json
+++ b/src/Translation/locales/ko.json
@@ -197,6 +197,14 @@
       "{marketplace_contract_link}에게 귀하를 대신하여 토지를 운영하도록 승인하십시오.",
     "authorization": "권한 부여"
   },
+  "transfer_mana": {
+    "title": "MANA 이전",
+    "action": "이전",
+    "current_balance": "현재 잔액은 {balance}입니다.",
+    "irreversible":
+      "MANA를 이전하는 것은 돌이킬 수없는 작업이라는 것을 기억하십시오.",
+    "own_address_warning": "그것은 당신의 자신의 주소입니다!"
+  },
   "derivation_path": {
     "supported": "당분간 {경로}로 시작하는 경로 만 지원합니다."
   },
