--- a/src/Translation/locales/es.json
+++ b/src/Translation/locales/es.json
@@ -157,6 +157,7 @@
       "Has autorizado al {marketplace_contract_link} para operar MANA por tu cuenta.",
     "disapproved":
       "Has desautorizado al {marketplace_contract_link} para operar MANA por tu cuenta.",
+    "transfer_mana": "Has transferido {mana} MANA a {address_link}",
     "authorize":
       "Has {action} al {marketplace_contract_link} para operar LAND por tu cuenta.",
     "edit":
@@ -202,6 +203,14 @@
     "authorize":
       "Autorizar al {marketplace_contract_link} a operar MANA por tu cuenta",
     "authorization": "Autorización"
+  },
+  "transfer_mana": {
+    "title": "Transferir MANA",
+    "action": "Transferir",
+    "current_balance": "Tu balance actual es {balance}",
+    "irreversible":
+      "Recuerda que transferir MANA es una operación irreversible.",
+    "own_address_warning": "Esa es tu propia dirección!"
   },
   "derivation_path": {
     "supported":
