--- a/src/Translation/locales/zh.json
+++ b/src/Translation/locales/zh.json
@@ -153,6 +153,7 @@
     "approved": "您授权{marketplace_contract_link}以您的名义操作MANA",
     "disapproved": "您未经授权{marketplace_contract_link}以您的名义操作MANA",
     "authorize": "您有{action} {marketplace_contract_link}以您的名义操作LAND",
+    "transfer_mana": "您将{mana}个MANA转移到{address_link}",
     "edit":
       "您已为{parcel_link}地块编辑了名称\"{name}\"和描述\"{description}\"",
     "transfer": "您已将{parcel_link}转让给{owner_link}",
@@ -185,6 +186,13 @@
     "you_authorized": "您已授权{marketplace_contract_link}以您的名义操作LAND",
     "authorize": "授权{marketplace_contract_link}在您的行为中操作LAND",
     "authorization": "授权"
+  },
+  "transfer_mana": {
+    "title": "转移MANA",
+    "action": "转让",
+    "current_balance": "您目前的余额是{balance}",
+    "irreversible": "请记住，转让MANA是一项不可逆转的行动。",
+    "own_address_warning": "这是你自己的地址！"
   },
   "derivation_path": {
     "supported": "我们暂时只支持以{paths}开头的路径"
