feat: Parcel History (#184)
* feat: transfer mana saga and activity

* feat: added Transfer button on Settings page

* feat: added UI

* feat: show transaction history on ParcelDetailPage

* merge

* fix: sort parcel history entries by block number

* feat: show block number on tooltip

* fix: hide row if empty

* chore: added translations

* chore: reorg migration script order

--- a/src/Translation/locales/en.json
+++ b/src/Translation/locales/en.json
@@ -58,8 +58,8 @@
     "on_sale": "On Sale"
   },
   "publication": {
-    "expired_at": "Expired {time} ago",
-    "expires_in": "Expires in {time}",
+    "expired_at": "Expired {time}",
+    "expires_in": "Expires {time}",
     "expires_in_more_than_years": "Expires in over {years} years",
     "view": "View",
     "sold": "Sold",
@@ -91,6 +91,16 @@
     "owner": {
       "part_of": "Part of {name}",
       "no_owner": "No Owner"
+    },
+    "history": {
+      "title": "Transaction History",
+      "event": "Event",
+      "price": "Price",
+      "when": "When",
+      "from": "From",
+      "to": "To",
+      "sold": "Sold",
+      "auction": "Auction"
     }
   },
   "parcel_edit": {
