--- a/src/Translation/locales/es.json
+++ b/src/Translation/locales/es.json
@@ -58,8 +58,8 @@
     "on_sale": "En Venta"
   },
   "publication": {
-    "expired_at": "Expiró hace {time}",
-    "expires_in": "Expira en {time}",
+    "expired_at": "Expiró {time}",
+    "expires_in": "Expira {time}",
     "expires_in_more_than_years": "Expira en más de {years} años",
     "view": "Ver",
     "sold": "Vendida",
@@ -91,6 +91,16 @@
     "owner": {
       "part_of": "Parte de {name}",
       "no_owner": "Sin Dueño"
+    },
+    "history": {
+      "title": "Historial de Transacciones",
+      "event": "Evento",
+      "price": "Precio",
+      "when": "Cuando",
+      "from": "De",
+      "to": "A",
+      "sold": "Venta",
+      "auction": "Subasta"
     }
   },
   "parcel_edit": {
