feat: mobile navbar

--- a/src/Translation/locales/en.json
+++ b/src/Translation/locales/en.json
@@ -29,7 +29,8 @@
     "sign_in": "Sign In",
     "sign_in_notice": "You need to {sign_in_link} to access this page",
     "owned_by": "Owned by",
-    "owned_by_link": "Owned by {address_link}"
+    "owned_by_link": "Owned by {address_link}",
+    "connecting": "Connecting"
   },
   "address": {
     "its_you": "It's you"
