--- a/src/Translation/locales/en.json
+++ b/src/Translation/locales/en.json
@@ -120,7 +120,8 @@
     "recipient_address": "Recipient address",
     "unknown_error": "An unknown error occurred, the details are below.",
     "error_persists":
-      "If the problem persists, contact us at our {community_chat_link}"
+      "If the problem persists, contact us at our {community_chat_link}",
+    "placeholder": "Example: {address}"
   },
   "parcel_buy": {
     "buy_land": "Buy LAND",
