--- a/src/Translation/locales/es.json
+++ b/src/Translation/locales/es.json
@@ -29,7 +29,8 @@
     "sign_in": "Conectar",
     "sign_in_notice": "Necesitas {sign_in_link} para acceder a esta página",
     "owned_by": "Controlada por",
-    "owned_by_link": "Controlada por {address_link}"
+    "owned_by_link": "Controlada por {address_link}",
+    "connecting": "Conectando"
   },
   "address": {
     "its_you": "Eres tú!"
@@ -121,7 +122,8 @@
     "unknown_error":
       "Un problema desconocido ha ocurrido, los detalles se encuentran debajo.",
     "error_persists":
-      "Si el problema persiste, contáctate con nosotros en {community_chat_link}"
+      "Si el problema persiste, contáctate con nosotros en {community_chat_link}",
+    "placeholder": "Ejemplo: {address}"
   },
   "parcel_buy": {
     "buy_land": "Comprar LAND",
