--- a/src/Translation/locales/fr.json
+++ b/src/Translation/locales/fr.json
@@ -30,7 +30,8 @@
     "sign_in_notice":
       "Vous devez vous connecter sur {sign_in_link} pour acceder a cette page",
     "owned_by": "Controlé par",
-    "owned_by_link": "Controlé par {address_link}"
+    "owned_by_link": "Controlé par {address_link}",
+    "connecting": "Connexion"
   },
   "address": {
     "its_you": "C'est toi"
@@ -121,7 +122,8 @@
     "unknown_error":
       "Une erreur s'est produite, les détails se trouvent ci-dessous.",
     "error_persists":
-      "Si le problème persiste, veuillez nous contacter sur {community_chat_link}"
+      "Si le problème persiste, veuillez nous contacter sur {community_chat_link}",
+    "placeholder": "Exemple: {address}"
   },
   "parcel_buy": {
     "buy_land": "Acheter une LAND",
