--- a/src/Translation/locales/en.json
+++ b/src/Translation/locales/en.json
@@ -30,7 +30,8 @@
     "sign_in_notice": "You need to {sign_in_link} to access this page",
     "owned_by": "Owned by",
     "owned_by_link": "Owned by {address_link}",
-    "connecting": "Connecting"
+    "connecting": "Connecting",
+    "click_here": "Click here"
   },
   "address": {
     "its_you": "It's you"
@@ -128,6 +129,7 @@
     "about_to_buy": "You are about to buy {parcel_name} {parcel_price}.",
     "approved_balance": "Your approved balance is {approved_balance}",
     "needs_at_least": "You need at least {mana} in order to buy this LAND.",
+    "buy_mana": "{click_here} to buy some MANA.",
     "didnt_approve": "You haven't authorized MANA usage",
     "please_approve":
       "Please go to {settings_link} and allow the Marketplace contract to operate MANA on your behalf",
