--- a/src/Translation/locales/en.json
+++ b/src/Translation/locales/en.json
@@ -93,6 +93,14 @@
       "part_of": "Part of {name}",
       "no_owner": "No Owner"
     },
+    "tags": {
+      "title": "Highlights",
+      "road": "Road",
+      "plaza": "Plaza",
+      "district": "District",
+      "no_distance": "Adjacent",
+      "distance": "{length} {length, plural, one {parcel} other {parcels}} away"
+    },
     "history": {
       "title": "Transaction History",
       "event": "Event",
