--- a/src/Translation/locales/fr.json
+++ b/src/Translation/locales/fr.json
@@ -31,7 +31,8 @@
       "Vous devez vous connecter sur {sign_in_link} pour acceder a cette page",
     "owned_by": "Controlé par",
     "owned_by_link": "Controlé par {address_link}",
-    "connecting": "Connexion"
+    "connecting": "Connexion",
+    "click_here": "Cliquez ici"
   },
   "address": {
     "its_you": "C'est toi"
@@ -132,6 +133,7 @@
     "approved_balance": "Votre balance est de {approved_balance}",
     "needs_at_least":
       "Vous avez besoin d'au moins {mana} pour acheter cette LAND.",
+    "buy_mana": "{click_here} pour acheter du MANA.",
     "didnt_approve": "Vous n'avez pas de MANA validée",
     "please_approve":
       "Veuillez accéder à {settings_link} et autoriser le contrat Marketplace à déplacer MANA en votre nom.",
@@ -181,7 +183,8 @@
     "publish": "Vous avez publié l'offre {parcel_link}",
     "buy": "Vous avez acheté {parcel_link}",
     "cancel":
-      "Vous avez annulé l'offre {publication_link} sur la LAND {parcel_link}"
+      "Vous avez annulé l'offre {publication_link} sur la LAND {parcel_link}",
+    "buy_mana": "Vous avez acheté {mana} MANA"
   },
   "transaction_status": {
     "see_activity":
@@ -227,8 +230,21 @@
     "irreversible": "Chaque transfert de MANA est une opération irréversible.",
     "own_address_warning": "C'est ta propre adresse!"
   },
+  "buy_mana": {
+    "title": "Convertir de ETH à MANA",
+    "action": "Acheter plus",
+    "available_eth": "Disponible: {eth} ETH",
+    "receive": "Recevoir",
+    "pay_with": "Payer avec",
+    "powered_by": "par {bancor_link}",
+    "rate": "Taux",
+    "slippage": "Glissement",
+    "not_enough": "Vous n'avez pas assez d'ETH à payer pour cela",
+    "amount_too_big": "Ce montant est trop important pour le Bancor Network"
+  },
   "derivation_path": {
-    "invalid": "Vous avez défini un mauvais chemin de dérivation pour votre portefeuille. Votre chemin de dérivation doit suivre le modèle 44 '/ 60 | 61' / x '/ n"
+    "invalid":
+      "Vous avez défini un mauvais chemin de dérivation pour votre portefeuille. Votre chemin de dérivation doit suivre le modèle 44 '/ 60 | 61' / x '/ n"
   },
   "color_key": {
     "title": "Code couleur",
