--- a/src/Translation/locales/ko.json
+++ b/src/Translation/locales/ko.json
@@ -30,7 +30,8 @@
     "sign_in_notice": "이 페이지에 액세스하려면 {sign_in_link}해야합니다.",
     "owned_by": "에게 소유 된",
     "owned_by_link": "{address_link} 소유",
-    "connecting": "연결 중"
+    "connecting": "연결 중",
+    "click_here": "여기를 클릭하십시오"
   },
   "address": {
     "its_you": "너야"
@@ -129,6 +130,7 @@
     "about_to_buy": "{parcel_name}을(를) 구입하려고 합니다.",
     "approved_balance": "승인 된 잔액은 {approved_balance}입니다.",
     "needs_at_least": "이 토지를 사려면 적어도 {value}가 필요합니다.",
+    "buy_mana": "MANA를 사기 위해 {click_here}.",
     "didnt_approve": "당신은 MANA를 승인하지 않았습니다",
     "please_approve": "{settings_link} (으)로 이동하여 MANA를 승인하십시오.",
     "total_balance": "Your balance is {balance}"
@@ -174,7 +176,8 @@
     "transfer": "{parcel_link}을 {owner_link}로 이전했습니다.",
     "publish": "{parcel_link}을(를) 게시했습니다.",
     "buy": "{parcel_link}을(를) 구입했습니다.",
-    "cancel": "{parcel_link}의 {publication_link}을 취소했습니다."
+    "cancel": "{parcel_link}의 {publication_link}을 취소했습니다.",
+    "buy_mana": "너는 {mana} MANA를 구입했다."
   },
   "transaction_status": {
     "see_activity": "거래 내역을 보려면 {activity_link}을 방문하십시오.",
@@ -216,8 +219,21 @@
       "MANA를 이전하는 것은 돌이킬 수없는 작업이라는 것을 기억하십시오.",
     "own_address_warning": "그것은 당신의 자신의 주소입니다!"
   },
+  "buy_mana": {
+    "title": "ETH을 MANA로 변환",
+    "action": "더 사",
+    "available_eth": "사용 가능 : {eth} ETH",
+    "receive": "받다",
+    "pay_with": "지불",
+    "powered_by": "작성자 : {bancor_link}",
+    "rate": "율",
+    "slippage": "미끄러짐",
+    "not_enough": "당신은 이것에 대해 지불 할 ETH가 충분하지 않습니다.",
+    "amount_too_big": "이 금액은 Bancor Network에 비해 너무 큽니다."
+  },
   "derivation_path": {
-    "invalid": "지갑에 대해 잘못된 파생 경로를 설정했습니다. 파생 경로는 패턴 44 '/ 60 | 61'/ x '/ n을 따라야합니다."
+    "invalid":
+      "지갑에 대해 잘못된 파생 경로를 설정했습니다. 파생 경로는 패턴 44 '/ 60 | 61'/ x '/ n을 따라야합니다."
   },
   "color_key": {
     "title": "색상 키",
