--- a/src/Translation/locales/fr.json
+++ b/src/Translation/locales/fr.json
@@ -95,6 +95,15 @@
       "part_of": "Appartient à {name}",
       "no_owner": "Pas de propriétaire"
     },
+    "tags": {
+      "title": "Points forts",
+      "road": "Route",
+      "plaza": "Places",
+      "district": "Quartiers",
+      "adjacent": "Adjacent",
+      "proximity":
+        "{distance} {distance, plural, one {parcelle} other {parcelles}} loin"
+    },
     "history": {
       "title": "Historique des Transactions",
       "event": "Événement",
