--- a/src/Translation/locales/ko.json
+++ b/src/Translation/locales/ko.json
@@ -94,6 +94,14 @@
       "part_of": "{name}의 일부",
       "no_owner": "소유자 없음"
     },
+    "tags": {
+      "title": "하이라이트",
+      "road": "도로",
+      "plaza": "광장",
+      "district": "지구",
+      "adjacent": "인접한",
+      "proximity": "{distance} 개 분실물"
+    },
     "history": {
       "title": "거래 내역",
       "event": "행사",
