--- a/src/Translation/locales/es.json
+++ b/src/Translation/locales/es.json
@@ -95,13 +95,7 @@
       "no_owner": "Sin Dueño"
     },
     "tags": {
-      "title": "Contexto",
-      "road": "Camino",
-      "plaza": "Plaza",
-      "district": "Distrito",
-      "adjacent": "Adyacente",
-      "proximity":
-        "{distance} {distance, plural, one {parcela} other {parcelas}} de distancia"
+      "title": "Contexto"
     },
     "history": {
       "title": "Historial de Transacciones",
@@ -113,6 +107,14 @@
       "sold": "Venta",
       "auction": "Subasta"
     }
+  },
+  "parcel_tags": {
+    "road": "Camino",
+    "plaza": "Plaza",
+    "district": "Distrito",
+    "adjacent": "Adyacente",
+    "proximity":
+      "{distance} {distance, plural, one {parcela} other {parcelas}} de distancia"
   },
   "parcel_edit": {
     "edit_land": "Editar LAND",
