--- a/src/Translation/locales/fr.json
+++ b/src/Translation/locales/fr.json
@@ -96,13 +96,7 @@
       "no_owner": "Pas de propriétaire"
     },
     "tags": {
-      "title": "Points forts",
-      "road": "Route",
-      "plaza": "Places",
-      "district": "Quartiers",
-      "adjacent": "Adjacent",
-      "proximity":
-        "{distance} {distance, plural, one {parcelle} other {parcelles}} loin"
+      "title": "Points forts"
     },
     "history": {
       "title": "Historique des Transactions",
@@ -114,6 +108,14 @@
       "sold": "Vente",
       "auction": "Enchères"
     }
+  },
+  "parcel_tags": {
+    "road": "Route",
+    "plaza": "Places",
+    "district": "Quartiers",
+    "adjacent": "Adjacent",
+    "proximity":
+      "{distance} {distance, plural, one {parcelle} other {parcelles}} loin"
   },
   "parcel_edit": {
     "edit_land": "Editer les informations de ma LAND",
