--- a/src/Translation/locales/ko.json
+++ b/src/Translation/locales/ko.json
@@ -95,12 +95,7 @@
       "no_owner": "소유자 없음"
     },
     "tags": {
-      "title": "하이라이트",
-      "road": "도로",
-      "plaza": "광장",
-      "district": "지구",
-      "adjacent": "인접한",
-      "proximity": "{distance} 개 분실물"
+      "title": "하이라이트"
     },
     "history": {
       "title": "거래 내역",
@@ -112,6 +107,13 @@
       "sold": "판매",
       "auction": "경매"
     }
+  },
+  "parcel_tags": {
+    "road": "도로",
+    "plaza": "광장",
+    "district": "지구",
+    "adjacent": "인접한",
+    "proximity": "{distance} 개 분실물"
   },
   "parcel_edit": {
     "edit_land": "토지 편집",
